# pico_transformer

./: README.md  pyproject.toml
notebooks/: transformer_from_scratch.ipynb
